compiler/tests/safety/success/common/bug_1109.jazz
param int SHAKE128_RATE = 168;

export
fn test() -> reg u32 {
  reg bool cond;
  reg u32 pos = 0, res = 0;
  while { cond = (pos < SHAKE128_RATE - 2); } (cond) {
    pos += 3;
    res += 1;
  }
  return res;
}

export
fn non_regression() {
  stack u32[SHAKE128_RATE] array;
  reg u32 i = 0, j = i;
  while (i <s SHAKE128_RATE >> 1) {
    array[j] = i;
    array[j + 1] = j;
    i += 1;
    j += 2;
  }
}
