compiler/tests/safety/fail/x86-64/carry_flags_err.jazz
export
fn test() -> reg u64 {
  reg bool cf;
  reg u64 i;

  i = 2;
  cf, i -= 1;
  if (!cf){
    #[ensure_termination]while (true) { i += 1;}
  }

  return i;
}
